--- a/package.json
+++ b/package.json
@@ -25,6 +25,14 @@
         "@vueform/multiselect": "^2.6.6",
         "@vueform/slider": "^2.1.10",
         "@vueform/toggle": "^2.1.4",
+        "@fullcalendar/bootstrap": "^6.1.8",
+        "@fullcalendar/core": "^6.1.8",
+        "@fullcalendar/daygrid": "^6.1.8",
+        "@fullcalendar/interaction": "^6.1.8",
+        "@fullcalendar/list": "^6.1.8",
+        "@fullcalendar/multimonth": "^6.1.9",
+        "@fullcalendar/timegrid": "^6.1.8",
+        "@fullcalendar/vue3": "^6.1.8",
         "aos": "^2.3.4",
         "bootstrap": "^5.3.2",
         "bootstrap-vue-next": "^0.15.5",
